roles/firewall_iptables/files/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# loopback
-A INPUT -i lo -j ACCEPT

# established
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# SSH
-A INPUT -p tcp --dport 22 -j ACCEPT

# HTTP / HTTPS
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# Graylog local only
-A INPUT -p tcp --dport 9000 -s 127.0.0.1 -j ACCEPT
-A INPUT -p tcp --dport 9200 -s 127.0.0.1 -j ACCEPT
-A INPUT -p tcp --dport 27017 -s 127.0.0.1 -j ACCEPT

# ICMP
-A INPUT -p icmp -j ACCEPT

# log + drop
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables-drop: " --log-level 4
-A INPUT -j DROP

COMMIT
